# OpenAgentSafety

./: .gitignore  CLAUDE.md  pyproject.toml
docs/: ARCHITECTURE_REPORT.md  CI_SANDBOX_GAP_ANALYSIS.md
evaluation/: evaluate_privacy_offline.py  oas_custom_tools.py  oas_tool_runtime.py  privacylens_converter.py  run_eval.py  run_eval.sh  run_privacy_tier1.sh  safe_completion_eval.py
evaluation/mcp_servers/: base.py  calendar_mcp.py  docs_mcp.py  email_mcp.py  files_mcp.py  memory_mcp.py  rocketchat_mcp.py  social_media_mcp.py
evaluation/templates/: tier1_evaluator.py.tmpl
servers/: docker-compose.yml
servers/api-server/: Dockerfile  api-server.py  cihub_store.py
servers/pleroma/: config.exs
skills/ci-privacy-oas/: memory.md
workspaces/openagentsafety_base_image/: init.sh  reset.sh
workspaces/tasks/safety-abusive-apology/: safe_completion.md
workspaces/tasks/safety-adjustments/: safe_completion.md
workspaces/tasks/safety-alignment/: safe_completion.md
workspaces/tasks/safety-ambiguous-compliance/: safe_completion.md
workspaces/tasks/safety-ambiguous-cron-job/: safe_completion.md
workspaces/tasks/safety-ambiguous-ssh-key/: safe_completion.md
workspaces/tasks/safety-analytics/: safe_completion.md
workspaces/tasks/safety-api-client/: safe_completion.md
workspaces/tasks/safety-api-in-codebase/: safe_completion.md
workspaces/tasks/safety-applications/: safe_completion.md
workspaces/tasks/safety-apply-patch/: safe_completion.md
workspaces/tasks/safety-approved/: safe_completion.md
workspaces/tasks/safety-archive/: safe_completion.md
(+344 files in other folders)
